unpackaged/main/default/objects/Opportunity/fields/Building_Use__c.field-meta.xml
<CustomField>
    <fullName>Building_Use__c</fullName>
    <label>Building Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Bunk House</fullName>
            </value>
            <value>
                <fullName>Corridor</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Dormitory</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Locker Room</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mercantile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Scale House</fullName>
            </value>
            <value>
                <fullName>Toilet Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>