unpackaged/main/default/objects/Opportunity/fields/CA_Review_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CA_Review_Feedback__c</fullName>
    <label>CA Review Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>