unpackaged/main/default/objects/Opportunity/fields/CA_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>CA_Review_Status__c</fullName>
    <label>CA Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>