unpackaged/main/default/objects/Opportunity/fields/Calculated_Probability__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Probability__c</fullName>
    <label>Calculated Probability (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>