unpackaged/main/default/objects/Opportunity/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to populate Primary Campaign Source</description>
    <inlineHelpText>Black Diamond internal business development initiative, often region based, e.g. US Gulf Coast.</inlineHelpText>
    <label>Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Campaign Source)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>