unpackaged/main/default/objects/Opportunity/fields/Carry_On_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carry_On_Notes__c</fullName>
    <description>Used in handover, primarily by MSS Langley</description>
    <inlineHelpText>List of Carry On needed for each Unit. Primarily used by MSS Langley Fleet Administrator.</inlineHelpText>
    <label>Carry On Notes</label>
    <type>TextArea</type>
</CustomField>