unpackaged/main/default/objects/Opportunity/fields/Caterer__c.field-meta.xml
<CustomField>
    <fullName>Caterer__c</fullName>
    <label>Caterer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>