unpackaged/main/default/objects/Opportunity/fields/Catering_Additional_Staff_Req_Day__c.field-meta.xml
<CustomField>
    <fullName>Catering_Additional_Staff_Req_Day__c</fullName>
    <description>Additional Staff required (Person per Day)</description>
    <label>Catering - Additional Staff Req / Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>