unpackaged/main/default/objects/Opportunity/fields/Catering_Manday_Minimum_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Catering_Manday_Minimum_per_Day__c</fullName>
    <label>Catering - Manday Minimum per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>