unpackaged/main/default/objects/Opportunity/fields/Catering_Manday_Minimum_Rate__c.field-meta.xml
<CustomField>
    <fullName>Catering_Manday_Minimum_Rate__c</fullName>
    <label>Catering - Manday Minimum Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>