unpackaged/main/default/objects/Opportunity/fields/Catering_Manday_Rate_Over_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Catering_Manday_Rate_Over_Minimum__c</fullName>
    <label>Catering - Manday Rate Over Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>