unpackaged/main/default/objects/Opportunity/fields/Catering_Resupply_per_Km__c.field-meta.xml
<CustomField>
    <fullName>Catering_Resupply_per_Km__c</fullName>
    <inlineHelpText>Staff Change / Grocery Resupply per KM</inlineHelpText>
    <label>Catering - Resupply (per Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>