unpackaged/main/default/objects/Opportunity/fields/Catering_Shut_Down_Fee__c.field-meta.xml
<CustomField>
    <fullName>Catering_Shut_Down_Fee__c</fullName>
    <label>Catering - Shut Down Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>