unpackaged/main/default/objects/Opportunity/fields/Catering_Start_Up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Catering_Start_Up_Fee__c</fullName>
    <label>Catering - Start Up Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>