unpackaged/main/default/objects/Opportunity/fields/Change_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Amount__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Total_Change_Order_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>