unpackaged/main/default/objects/Opportunity/fields/Client_Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Rating__c</fullName>
    <inlineHelpText>A rating provided by Vanguard's client pertaining to their experience. This rating is input by Marketing based on the client's feedback by clicking one of three emailed links which is then reported in Google Analytics under Campaigns.</inlineHelpText>
    <label>Client Experience Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Rating</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>