unpackaged/main/default/objects/Opportunity/fields/Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Type__c</fullName>
    <description>This field occurs in the following Record Types:
Equipment Rentals</description>
    <label>Commitment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract w/o min</fullName>
            </value>
            <value>
                <fullName>Contract w/ min</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>