unpackaged/main/default/objects/Opportunity/fields/Competitor_3__c.field-meta.xml
<CustomField>
    <fullName>Competitor_3__c</fullName>
    <label>Competitor 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACS – Australian Camp Services</fullName>
            </value>
            <value>
                <fullName>Acton</fullName>
            </value>
            <value>
                <fullName>Alberta Gold Energy &amp; Rentals</fullName>
            </value>
            <value>
                <fullName>Alito Energy</fullName>
            </value>
            <value>
                <fullName>Ally</fullName>
            </value>
            <value>
                <fullName>APC - Australian Portable Camps</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>Aramark Remote Services</fullName>
            </value>
            <value>
                <fullName>Armstrong Trailer Rentals</fullName>
            </value>
            <value>
                <fullName>ATCO Structures and Logistics</fullName>
            </value>
            <value>
                <fullName>Ausco</fullName>
            </value>
            <value>
                <fullName>Aussie Portables</fullName>
            </value>
            <value>
                <fullName>Aveda Rentals</fullName>
            </value>
            <value>
                <fullName>Britco</fullName>
            </value>
            <value>
                <fullName>BRT</fullName>
            </value>
            <value>
                <fullName>Bulldog Rentals</fullName>
            </value>
            <value>
                <fullName>C&amp;V Portable Trailers</fullName>
            </value>
            <value>
                <fullName>Camden Hire</fullName>
            </value>
            <value>
                <fullName>Campbell Oilfield Rentals</fullName>
            </value>
            <value>
                <fullName>Capex</fullName>
            </value>
            <value>
                <fullName>Captive</fullName>
            </value>
            <value>
                <fullName>Chandell Rentals</fullName>
            </value>
            <value>
                <fullName>Clean Harbors</fullName>
            </value>
            <value>
                <fullName>Clean Harbors (BCT)</fullName>
            </value>
            <value>
                <fullName>Coates Hire</fullName>
            </value>
            <value>
                <fullName>Complete Portables – The Complete Group</fullName>
            </value>
            <value>
                <fullName>Corab</fullName>
            </value>
            <value>
                <fullName>Dickie Moore</fullName>
            </value>
            <value>
                <fullName>East Coast Catering</fullName>
            </value>
            <value>
                <fullName>Empire Camp Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>