unpackaged/main/default/objects/Opportunity/fields/Competitor_Lost_To_Other__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lost_To_Other__c</fullName>
    <label>Competitor Lost To (Other):</label>
    <length>255</length>
    <type>Text</type>
</CustomField>