unpackaged/main/default/objects/Opportunity/fields/Competitor_LostTo__c.field-meta.xml
<CustomField>
    <fullName>Competitor_LostTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of company that won this job, external to Black Diamond.</inlineHelpText>
    <label>Competitor Lost To</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Competitor__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Competitor__c.Division_Text__c</field>
            <operation>contains</operation>
            <valueField>$User.BDG_Division__c</valueField>
        </filterItems>
        <filterItems>
            <field>Competitor__c.Country_Text__c</field>
            <operation>contains</operation>
            <valueField>$User.Country</valueField>
        </filterItems>
        <infoMessage>List of Active Competitors where the Country and Division match the current user</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunities Lost to this Competitor</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>