unpackaged/main/default/objects/Opportunity/fields/Competitor_Other__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Other__c</fullName>
    <label>Competitor Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>