unpackaged/main/default/objects/Opportunity/fields/Construction_Services__c.field-meta.xml
<CustomField>
    <fullName>Construction_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Construction Services</label>
    <type>Checkbox</type>
</CustomField>