unpackaged/main/default/objects/Opportunity/fields/Contract_Created__c.field-meta.xml
<CustomField>
    <fullName>Contract_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Created</label>
    <type>Checkbox</type>
</CustomField>