unpackaged/main/default/objects/Opportunity/fields/Contract_Current_Action__c.field-meta.xml
<CustomField>
    <fullName>Contract_Current_Action__c</fullName>
    <inlineHelpText>Describes the latest on where the contract review stands at this point and time.</inlineHelpText>
    <label>Contract Current Action</label>
    <type>TextArea</type>
</CustomField>