unpackaged/main/default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Concatenate the Branch code with the Opportunity ID to create the contract #</description>
    <formula>IF( OR(AND(Renewal_Opportunity__c,NOT(Vanguard_Renewal__c )), Imported_from_SAP__c ), Original_Contract__c ,SUBSTITUTE( Opportunity_ID__c , "O-", BranchCode__c &amp; "-"))</formula>
    <inlineHelpText>Contract Number (built from the Opp ID and Branch code)</inlineHelpText>
    <label>Contract #</label>
    <type>Text</type>
</CustomField>