unpackaged/main/default/objects/Opportunity/fields/Contract_Review_History__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_History__c</fullName>
    <inlineHelpText>Displays a historical record of the contract review actions taken.</inlineHelpText>
    <label>Contract Review History</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>