unpackaged/main/default/objects/Opportunity/fields/Contract_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Status__c</fullName>
    <inlineHelpText>Pertains to contract review by Vanguard's contracts department.</inlineHelpText>
    <label>Contract Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
                <default>true</default>
                <label>Select One</label>
            </value>
            <value>
                <fullName>None Required</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>