unpackaged/main/default/objects/Opportunity/fields/Contract_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Contract_Special_Requirements__c</fullName>
    <inlineHelpText>These are special requirements that must be met or adhered to for a successful project outcome.</inlineHelpText>
    <label>Contract Special Requirements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>