unpackaged/main/default/objects/Opportunity/fields/Contracts_Bulk_Imported__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Bulk_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts Bulk Imported</label>
    <type>Checkbox</type>
</CustomField>