unpackaged/main/default/objects/Opportunity/fields/Cooperative_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cooperative_Opportunity__c</fullName>
    <description>Coop that played a role for this opportunity</description>
    <inlineHelpText>Applicable only for the US Opportunities</inlineHelpText>
    <label>Cooperative - Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cooperatives</valueSetName>
    </valueSet>
</CustomField>