unpackaged/main/default/objects/Opportunity/fields/Count_of_Lost__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Lost__c</fullName>
    <formula>CASE( StageName ,
"Lost",1,
"Cancelled",1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>