unpackaged/main/default/objects/Opportunity/fields/Count_of_Won__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Won__c</fullName>
    <formula>CASE( StageName ,
"WIP",1,
"Awarded - w/ term &amp; contract",1,
"Awarded - w/o term &amp; contract",1,
"Completed.",1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>