unpackaged/main/default/objects/Opportunity/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>This field occurs in the following Record Types:
Space Rentals
Equipment Rentals</description>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>