unpackaged/main/default/objects/Opportunity/fields/County_Tax__c.field-meta.xml
<CustomField>
    <fullName>County_Tax__c</fullName>
    <label>County Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>