unpackaged/main/default/objects/Opportunity/fields/Create_Customer_in_NS__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer_in_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Customer in NS</label>
    <type>Checkbox</type>
</CustomField>