unpackaged/main/default/objects/Opportunity/fields/Create_Folder_Structure__c.field-meta.xml
<CustomField>
    <fullName>Create_Folder_Structure__c</fullName>
    <formula>OR(Branch_Name__r.Name  = 'BOXX Atlanta',
Branch_Name__r.Name  = 'BOXX Fort Worth', 
Branch_Name__r.Name  = 'BOXX Houston',
Branch_Name__r.Name  = 'BOXX Charlotte', 
Branch_Name__r.Name  = 'BOXX Major Projects', 
Branch_Name__r.Name  = 'BOXX Schiavi', 
Branch_Name__r.Name  = 'BOXX Raleigh', 
Branch_Name__r.Name  = 'BOXX Marietta',
Branch_Name__r.Name  = 'Major Projects California',
Branch_Name__r.Name  = 'BOXX Banks Dallas',
Create_Project_CAN__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Folder Structure</label>
    <type>Checkbox</type>
</CustomField>