unpackaged/main/default/objects/Opportunity/fields/Create_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by integration to trigger creation of the Project on Fleet Central</description>
    <inlineHelpText>Used by integration to trigger creation of the Project on Fleet Central</inlineHelpText>
    <label>Create Project</label>
    <type>Checkbox</type>
</CustomField>