unpackaged/main/default/objects/Opportunity/fields/Create_Project_CAN__c.field-meta.xml
<CustomField>
    <fullName>Create_Project_CAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers folder structure creation in Project Document</description>
    <label>Create Project CAN</label>
    <type>Checkbox</type>
</CustomField>