unpackaged/main/default/objects/Opportunity/fields/Create_Project_Handover__c.field-meta.xml
<CustomField>
    <fullName>Create_Project_Handover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by integration to trigger creation of the Project Handover Checklist on Fleet Central</description>
    <inlineHelpText>Used by integration to trigger creation of the Project Handover Checklist on Fleet Central</inlineHelpText>
    <label>Create Project Handover</label>
    <type>Checkbox</type>
</CustomField>