unpackaged/main/default/objects/Opportunity/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>Role of User who created Opportunity</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <inlineHelpText>Role of User who created Opportunity</inlineHelpText>
    <label>Created By Role</label>
    <type>Text</type>
</CustomField>