unpackaged/main/default/objects/Opportunity/fields/Credit_App_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Obtained__c</fullName>
    <description>Used for handover.</description>
    <inlineHelpText>Has customer provided complete Credit Limit Application?</inlineHelpText>
    <label>Credit App Obtained?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>