unpackaged/main/default/objects/Opportunity/fields/Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Approval</label>
    <referenceTo>Credit_Approval__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>