unpackaged/main/default/objects/Opportunity/fields/Credit_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Date__c</fullName>
    <label>Credit Approval Date</label>
    <type>Date</type>
</CustomField>